[package]
name = "aero"
version = "0.1.4"
authors = ["cooperhsiung <cooperhsiung@gmail.com>"]
description = "A progressive, idiomatic, and minimalist framework for building Rust HTTP services"
keywords = ["http", "server", "web"]
repository = "https://github.com/cooperhsiung/aero"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.117",features = ["derive"]} 
serde_json = "1.0.59"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1.56"
